Use copyOf instead of Collections.unmodifiableList(new ArrayList<>(x))