@@ -32,7 +32,6 @@ import java.io.DataInputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -79,7 +78,7 @@ final public class SimpleSelector extends Selector {
      * @deprecated for future removal, use {@link #getStyleClassNames()} instead
      */
     public List<String> getStyleClasses() {
-        return Collections.unmodifiableList(new ArrayList<>(selectorStyleClassNames));
+        return List.copyOf(selectorStyleClassNames);
     }
 
     /**
